--- a/contact.html
+++ b/contact.html
@@ -404,7 +404,7 @@
               </div> <!-- overlay -->
               <img src="images/proudcts/19.png" alt="">
               <div class="box-desc">
-                <span class="title-prod">يطاطس</span>
+                <span class="title-prod">بطاطس</span>
                 <span class="desc-prod">250 جم</span>
               </div>
               <span class="pirc">3 <span>AED</span></span>
